<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MatrixCalcFragment">

    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation = "vertical" >

            <android.support.constraint.ConstraintLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/txtinplOne"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="30dp"
                >

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/firstMatrix"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txtinputBackA"

                    />


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtinplTwo"
                        app:layout_constraintTop_toBottomOf="@id/txtinplOne"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/secondMatrix"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txtinputBackB"

                    />
                </android.support.design.widget.TextInputLayout>


                <GridLayout
                        android:id="@+id/gridMatrixBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="3"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        app:layout_constraintTop_toBottomOf="@id/txtinplTwo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">


                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnDeterminant"
                            android:text="@string/determinant"
                            android:onClick="countDet"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnPlus"
                            android:text="@string/btnPlus"
                            android:onClick="matrixPlus"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnMinus"
                            android:text="@string/btnMinus"
                            android:onClick="matrixMinus"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnFirstTimesSecond"
                            android:text="@string/btnFirstTimesSecond"
                            android:onClick="firstTimesSecondMatrix"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnSecondTimesFirst"
                            android:text="@string/btnSecondTimesFirst"
                            android:onClick="secondTimesFirstMatrix"/>
                    <Button
                            style="@style/btnStyle"
                            android:id="@+id/btnInvers"
                            android:text="@string/btnInvers"
                            android:onClick="invertMatrix"/>
                </GridLayout>

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/matrixRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clipToPadding="false"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contextClickable="true">

            </android.support.v7.widget.RecyclerView>



        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

</FrameLayout>