<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity_polinom_calc"
        android:id="@+id/polDrawerLayout"
        style="@style/drawerLayoutStyle">
    <FrameLayout
        style="@style/frameLayoutStyle"
        android:id="@+id/polFrame">
            <ScrollView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".activity_polinom_calc">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/firstPolinom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:hint="@string/hintPolinomA"
                                android:inputType="text"/>

                        <EditText
                                android:id="@+id/secondPolinom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                app:layout_constraintTop_toBottomOf="@id/firstPolinom"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:hint="@string/hintPolinomB"
                                android:inputType="text"/>

                        <GridLayout

                                android:id="@+id/gridBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:columnCount="3"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"

                                app:layout_constraintTop_toBottomOf="@id/secondPolinom"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent">

                            <Button
                                    style="@style/btnStyle"
                                    android:id="@+id/btnPolPlus"
                                    android:text="@string/btnPlus"/>
                            <Button
                                    style="@style/btnStyle"
                                    android:id="@+id/btnPolMinus"
                                    android:text="@string/btnMinus"/>
                            <Button
                                    style="@style/btnStyle"
                                    android:id="@+id/btnPolTimes"
                                    android:text="@string/btnTimes"/>
                            <Button
                                    style="@style/btnStyle"
                                    android:id="@+id/btnPolRootsA"
                                    android:text="@string/btnRootsA"/>
                            <Button
                                    style="@style/btnStyle"
                                    android:id="@+id/btnPolRootsB"
                                    android:text="@string/btnRootsB"/>
                            <Button
                                    style="@style/btnStyle"
                                    android:id="@+id/btnPolDiv"
                                    android:text="@string/btnDivision"/>

                        </GridLayout>


                    </android.support.constraint.ConstraintLayout>

                    <android.support.v7.widget.RecyclerView
                            android:id="@+id/polinomRecycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:clipToPadding="false"
                            android:padding="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:contextClickable="true"
                            >

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>



            </ScrollView>
    </FrameLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/polNavigationView"
            app:headerLayout="@layout/drawer_header_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:itemTextColor="@android:color/darker_gray"
            android:layout_gravity = "start"
            app:menu="@menu/main_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>