<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     tools:context=".MainActivity">

            <Button
                    android:text="@string/btnCalculator"
                    style="@style/MainActivityBtn"
                    android:id="@+id/btnCalc"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="calcClick"
                    />
            <Button
                    style="@style/MainActivityBtn"
                    android:id="@+id/btnForm"
                    android:text="@string/btnquadraticreduction"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btnCalc"
                    android:layout_marginTop="90dp"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            <Button
                    style="@style/MainActivityBtn"
                    android:id="@+id/btnPolinom"
                    android:text="@string/btnPolinom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnForm"
                    android:layout_marginTop="10dp"
            />
            <Button
                    android:text="@string/btnSettings"
                    style="@style/MainActivityBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btnPolinom"
                    android:layout_marginTop="90dp"
                    android:id="@+id/btnSettings"
                    />

        </android.support.constraint.ConstraintLayout>
</ScrollView>